# elementerra-rs

./: Cargo.toml  LICENSE  NOTES.md  README.md
clis/ele-cli/: Cargo.toml  README.md
clis/ele-cli/src/: main.rs
clis/ele-forge/: Cargo.toml  README.md
ele-forge/src/: lib.rs  main.rs
program-sdks/elementerra-sdk/: Cargo.toml
program-sdks/elementerra-sdk/src/: lib.rs  programs.rs
program-sdks/elementerra-sdk/src/derive/: mod.rs  player.rs  season.rs
programs/elementerra/: Cargo.toml  README.md  idl.json
programs/elementerra/src/: lib.rs
