[package]
name = "elementerra-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.29"
anyhow = "1.0"
elementerra = { path = "../../programs/elementerra", features = ["no-entrypoint"]  }